@startuml

!define Entity class
!define PrimaryKey <<PK>>
!define ForeignKey <<FK>>

entity User {
  + id INT PrimaryKey
  * email VARCHAR(255)
  * password VARCHAR(255)
}

entity Deck {
  + id INT PrimaryKey
  --
  * userId INT ForeignKey
  * ImgPath VARCHAR(255)
  * Name VARCHAR(255)
  * Description VARCHAR(255)
}

entity Card {
  + id INT PrimaryKey
  --
  + deckId INT ForeignKey
  * ImgPath VARCHAR(255)
  * Question VARCHAR(255)
  * Answer VARCHAR(255)
}

User o-- Deck 
Deck o-- Card 

@enduml